--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="stile.css">
 </head>
 <body>
-    
+    <header>
+        <div class="head1">
+            <div class="logo"></div>
+            <div class="button"></div>
+            <div class="button"></div>
+            <div class="button"></div>
+        </div>
+        <div class="head2">
+            <div class="button"></div>
+            <div class="button"></div>
+            <div class="button"></div>
+            <div class="button"></div>
+        </div>
+    </header>
+    <main>
+        <div class="blocco1">
+            <div class="card_b1"></div>
+            <div class="container">
+                <div class="card_b2"></div>
+            <div class="card_b3"></div>
+            </div>
+            
+        </div>
+    </main>
+    <footer></footer>
 </body>
 </html>
