--- a/index.html
+++ b/index.html
@@ -8,28 +8,102 @@
 </head>
 <body>
     <header>
+        <!-- sezione navbar -->
         <div class="head1">
             <div class="logo"></div>
-            <div class="button"></div>
-            <div class="button"></div>
-            <div class="button"></div>
+            <button class="button"></button>
+            <button class="button"></button>
+            <button class="button"></button>
         </div>
         <div class="head2">
-            <div class="button"></div>
-            <div class="button"></div>
-            <div class="button"></div>
-            <div class="button"></div>
+            <button class="button"></button>
+            <button class="button"></button>
+            <button class="button"></button>
+            <button class="button"></button>
         </div>
     </header>
     <main>
+        <!-- blocco1 -->
         <div class="blocco1">
             <div class="card_b1"></div>
             <div class="container">
-                <div class="card_b2"></div>
+            <div class="card_b2"></div>
             <div class="card_b3"></div>
             </div>
-            
         </div>
+        <!-- blocco2 -->
+        <div class="blocco2">
+            <div class="card2_b1">
+                <h1><b class="Titolo_b">Trova il piano business che fa per te </b></h1><br>
+                <input id="input" type="radio">Fattura mensile</li> 
+                <input type="radio">Fatturazione annuale
+            </div>
+            <div class="container">
+                <div class="card">
+                    <div class="bar"><h3>Singolo</h3></div>
+                    <h2>Professional</h2><br>
+                    <p>€ 12.00</p><br>
+                    <p class="opacity">/mese</p><br>
+                    <p>1utente</p><br>
+                    <p>Tutto lo spazio di cui ha bisogno il tuo team </p>
+                    <p>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team </p><br>
+                    <button class="button_blu">Prova per 30 giorni</button><br>
+                    <p>oppure <a href="">aquista ora</a></p><br>
+                    <p>_________</p><br>
+                    <b>Punti Salienti del piano</b><br>
+                    <p>Invia file fino a 100 GB con Dropbox</p>
+                    <p>Invia file fino a 100 GB con Dropbox</p>
+                    <div></div>
+                </div>
+                <div class="card">
+                    <div class="bar"><h3>Team</h3></div>
+                    <h2>Advanced</h2><br>
+                    <p>€ 18.00</p><br>
+                    <p class="opacity">/utente/mese</p><br>
+                    <p>3 o piu utenti</p><br>
+                    <p>Tutto lo spazio di cui ha bisogno il tuo team </p>
+                    <p>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team </p><br>
+                    <button class="button_blu">Prova per 30 giorni</button><br>
+                    <p>oppure <a href="">aquista ora</a></p><br>
+                    <p>_________</p><br>
+                    <b>Punti Salienti del piano</b><br>
+                    <p>Invia file fino a 100 GB con Dropbox</p>
+                    <p>Invia file fino a 100 GB con Dropbox</p>
+                    <p>Invia file fino a 100 GB con Dropbox</p>
+                    <p>Invia file fino a 100 GB con Dropbox</p>
+                    <p>Invia file fino a 100 GB con Dropbox</p>
+                    <div></div>
+                </div>
+                <div class="card">
+                    <div class="bar"><h3>Azienda</h3></div>
+                    <h2>Entrerprise</h2><br>
+                    <p>Contattaci</p><br>
+                    <p class="opacity">-</p><br> 
+                    <p>10 o più utenti</p><br>
+                    <p>Tutto lo spazio di cui ha bisogno il tuo team </p>
+                    <p>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team </p><br>
+                    <br>
+                    <button class="button_blu">Contattaci</button><br>
+                    <p>oppure <a href="">aquista ora</a></p><br>
+                    <p>_________</p><br>
+                    <b>Punti Salienti del piano</b><br>
+                    <p>Invia file fino a 100 GB con Dropbox</p>
+                    <p>Invia file fino a 100 GB con Dropbox</p>
+                    <p>Invia file fino a 100 GB con Dropbox</p>
+                    <div></div>
+                </div>
+            </div>
+            <div class="card2">
+                <div class="bar2"><h2>Team</h2></div>
+                <div class="container2">
+                    <h2>Entrerprise</h2>
+                    <button> Contatta l'ufficio vendite</button>
+                </div><br>
+                <p><b>Contatta l'ufficio  vendite per i pezzi</b></p><br>
+                <p>Soluzioni personallizzate e supporto su misura per aiutare i professionisti IT nella gestioe su qualsiasi scala</p>
+            </div>
+<!-- Blocco 3 -->
+        
     </main>
     <footer></footer>
 </body>
