--- a/index.html
+++ b/index.html
@@ -169,8 +169,39 @@
         </div>
 <!------------Blocco5 -------------->
 <div class="blocco5">
-    
+    <div class="card5_b1">
+        <div class="partner">
+
+        </div>
+        <div class="partner">
+
+        </div>
+        <div class="partner">
+
+        </div>
+        <div class="partner">
+
+        </div>
+    </div>
+    <div class="card5_b2">
+        
+    </div>
+    <div class="card5_b1">
+        <div class="partner">
+
+        </div>
+        <div class="partner">
+
+        </div>
+        <div class="partner">
+
+        </div>
+        <div class="partner">
+
+        </div>
+    </div>
 </div>
+<!-- blocco6 -->
     </main>
     <footer></footer>
 </body>
