--- a/index.html
+++ b/index.html
@@ -233,48 +233,50 @@
     </main>
     <!-------------------BLOCCO8------------------------>
     <footer class="blocco8">
-        <div class="card_b8">
-            <h2>Dropbox</h2><br>
-            <p>Applicazione desktop</p><br>
-            <p>Perchè dropblox</p><br>
-            <p>Piani</p><br>
-            <p>Sicurezza </p><br>
-            <p>Funzioni</p><br>
-        </div>
-        <div class="card_b8">
-            <h2>Dropbox</h2><br>
-            <p>Applicazione desktop</p><br>
-            <p>Perchè dropblox</p><br>
-            <p>Piani</p><br>
-            <p>Sicurezza </p><br>
-            <p>Funzioni</p><br>
-        </div>
-        <div class="card_b8">
-            <h2>Dropbox</h2><br>
-            <p>Applicazione desktop</p><br>
-            <p>Perchè dropblox</p><br>
-            <p>Piani</p><br>
-            <p>Sicurezza </p><br>
-            <p>Funzioni</p><br>
-        </div>
-        <div class="card_b8">
-            <h2>Dropbox</h2><br>
-            <p>Applicazione desktop</p><br>
-            <p>Perchè dropblox</p><br>
-            <p>Piani</p><br>
-            <p>Sicurezza </p><br>
-            <p>Funzioni</p><br>
-        </div>
-        <div class="card_b8">
-            <h2>Dropbox</h2><br>
-            <p>Applicazione desktop</p><br>
-            <p>Perchè dropblox</p><br>
-            <p>Piani</p><br>
-            <p>Sicurezza </p><br>
-            <p>Funzioni</p><br>
+        <div class="container8">
+            <div class="card_b8">
+                <h2>Dropbox</h2><br>
+                <p>Applicazione desktop</p><br>
+                <p>Perchè dropblox</p><br>
+                <p>Piani</p><br>
+                <p>Sicurezza </p><br>
+                <p>Funzioni</p><br>
+            </div>
+            <div class="card_b8">
+                <h2>Dropbox</h2><br>
+                <p>Applicazione desktop</p><br>
+                <p>Perchè dropblox</p><br>
+                <p>Piani</p><br>
+                <p>Sicurezza </p><br>
+                <p>Funzioni</p><br>
+            </div>
+            <div class="card_b8">
+                <h2>Dropbox</h2><br>
+                <p>Applicazione desktop</p><br>
+                <p>Perchè dropblox</p><br>
+                <p>Piani</p><br>
+                <p>Sicurezza </p><br>
+                <p>Funzioni</p><br>
+            </div>
+            <div class="card_b8">
+                <h2>Dropbox</h2><br>
+                <p>Applicazione desktop</p><br>
+                <p>Perchè dropblox</p><br>
+                <p>Piani</p><br>
+                <p>Sicurezza </p><br>
+                <p>Funzioni</p><br>
+            </div>
+            <div class="card_b8">
+                <h2>Dropbox</h2><br>
+                <p>Applicazione desktop</p><br>
+                <p>Perchè dropblox</p><br>
+                <p>Piani</p><br>
+                <p>Sicurezza </p><br>
+                <p>Funzioni</p><br>
+            </div>
         </div>
          <div class="final">
-            Italiano
+            <h4>Italiano</h4>
          </div>
         
     </footer>
